Updated swagger document
