# swagger.yaml
@@ -1,146 +1,198 @@
-swagger: "2.0"
-info:
-  version: 1.0.0
-  title: Your API Title
-  description: Blog API
-host: localhost:8080
-basePath: /
-schemes:
-  - http
 consumes:
-  - application/json
-produces:
-  - application/json
-
-paths:
-  /:
-    get:
-      summary: Health Check
-      description: Performs a basic health check of the service.
-      operationId: healthCheck
-      produces:
-        - application/json
-      responses:
-        "200":
-          description: Success
-          content:
-            application/json:
-              schema:
-                $ref: '#/definitions/Response'
-          example:
-            status: 200
-            message: "Success"
-            data: "Health Check is OK"
-
-  /articles:
-    get:
-      summary: Get a list of articles
-      description: Retrieve a list of articles.
-      operationId: allArticle
-      produces:
-        - application/json
-      responses:
-        "200":
-          description: Success
-          content:
-            application/json:
-              schema:
-                $ref: '#/definitions/ArticleList'
-          example:
-            data:
-              - id: 1
-                title: "Article 1"
-                content: "This is the content of Article 1."
-              - id: 2
-                title: "Article 2"
-                content: "This is the content of Article 2."
-    post:
-      summary: Insert an article
-      description: Inserts an article into the service.
-      operationId: insertArticle
-      consumes:
-        - application/json
-      produces:
-        - application/json
-      parameters:
-        - name: article
-          in: body
-          required: true
-          schema:
-            $ref: '#/definitions/Article'
-          example:
-            title: "Second Article"
-            content: "Lorem ipsum dolor sit amet, "
-            author: "John"
-      responses:
-        "201":
-          description: Success
-          content:
-            application/json:
-              schema:
-                $ref: '#/definitions/Article'
-          example:
-            id: 1
-            title: "Second Article"
-            content: "Lorem ipsum dolor sit amet, "
-            author: "John"
-
-  /articles/{id}:
-    get:
-      consumes:
-        - application/x-www-form-urlencoded
-      description: Retrieve an article by its ID.
-      operationId: getArticle
-      produces:
-        - application/json
-      parameters:
-        - name: id
-          in: path
-          required: true
-          description: The ID of the article.
-          schema:
-            type: integer
-          example: 1  # Sample ID value
-      responses:
-        "200":
-          description: "Success"
-          content:
-            application/json:
-              schema:
-                $ref: '#/definitions/Article'
-          example:
-            status: 200
-            message: Success
-            data:
-              id: 1
-              title: "Second Article"
-              content: "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-              author: "John"
-
+    - application/json
 definitions:
-  Response:
-    type: object
-    properties:
-      status:
-        type: integer
-        format: int32
-      message:
-        type: string
-      data:
-        type: string
-
-  Article:
-    type: object
-    properties:
-      id:
-        type: integer
-        format: int32
-      title:
-        type: string
-      content:
-        type: string
-
-  ArticleList:
-    type: array
-    items:
-      $ref: '#/definitions/Article'
+    Article:
+        description: Article
+        properties:
+            author:
+                description: |-
+                    Author of the article
+                    in: string
+                type: string
+            content:
+                description: |-
+                    Content of the article
+                    in: string
+                type: string
+            id:
+                description: |-
+                    ID of the article
+                    in: int
+                format: int64
+                type: integer
+            title:
+                description: |-
+                    Title of the article
+                    in: string
+                type: string
+        type: object
+    ID:
+        properties:
+            id:
+                description: |-
+                    ID of the article
+                    in: int
+                format: int64
+                type: integer
+        type: object
+    Response:
+        description: Response
+        properties:
+            data:
+                description: Any type of Response data or null
+            message:
+                description: Success or error message
+                type: string
+            status:
+                description: Status code of the response
+                format: int64
+                type: integer
+        type: object
+host: localhost:8080
+info:
+    description: Package api
+    version: 0.0.1
+paths:
+    /:
+        get:
+            operationId: healthCheck
+            responses:
+                "200":
+                    $ref: '#/responses/SuccessResponse'
+                "500":
+                    $ref: '#/responses/ErrorResponse'
+            summary: Performs a basic health check of the service.
+    /articles:
+        get:
+            operationId: allArticle
+            responses:
+                "200":
+                    $ref: '#/responses/ArticleListResponse'
+                "500":
+                    $ref: '#/responses/ErrorResponse'
+            summary: Retrieve a list of articles.
+        post:
+            description: Parses a JSON request to create a new article and returns the result.
+            operationId: InsertArticle
+            parameters:
+                - description: The article data to be created.
+                  in: body
+                  name: article
+                  required: true
+                  schema:
+                    $ref: '#/definitions/Article'
+            responses:
+                "201":
+                    $ref: '#/responses/ArticleResponse'
+                    description: Created
+                "500":
+                    $ref: '#/responses/ErrorResponse'
+            summary: Create an article.
+    /articles/{id}:
+        get:
+            operationId: getArticle
+            parameters:
+                - description: The ID of the article.
+                  in: path
+                  name: id
+                  required: true
+                  schema:
+                    example: 1
+                    type: integer
+            produces:
+                - application/json
+            responses:
+                "200":
+                    $ref: '#/responses/ArticleResponse'
+                "500":
+                    $ref: '#/responses/ErrorResponse'
+            summary: Retrieve an article by its ID.
+produces:
+    - application/json
+responses:
+    Article:
+        description: Article
+        headers:
+            author:
+                description: |-
+                    Author of the article
+                    in: string
+                type: string
+            content:
+                description: |-
+                    Content of the article
+                    in: string
+                type: string
+            id:
+                description: |-
+                    ID of the article
+                    in: int
+                format: int64
+                type: integer
+            title:
+                description: |-
+                    Title of the article
+                    in: string
+                type: string
+    ArticleListResponse:
+        description: ArticleListResponse
+        schema:
+            properties:
+                data:
+                    items:
+                        $ref: '#/definitions/Article'
+                    type: array
+                message:
+                    type: string
+                status:
+                    format: int64
+                    type: integer
+            type: object
+    ArticleResponse:
+        description: ArticleResponse
+        schema:
+            properties:
+                data:
+                    $ref: '#/definitions/Article'
+                message:
+                    type: string
+                status:
+                    format: int64
+                    type: integer
+            type: object
+    ErrorResponse:
+        description: ErrorResponse
+        schema:
+            $ref: '#/definitions/Response'
+    Response:
+        description: Response
+        headers:
+            data:
+                description: Any type of Response data or null
+            message:
+                description: Success or error message
+                type: string
+            status:
+                description: Status code of the response
+                format: int64
+                type: integer
+        schema: {}
+    ResponseCreateArticle:
+        description: ResponseCreateArticle
+        schema:
+            properties:
+                data:
+                    $ref: '#/definitions/ID'
+                message:
+                    type: string
+                status:
+                    format: int64
+                    type: integer
+            type: object
+    SuccessResponse:
+        description: SuccessResponse
+        schema:
+            $ref: '#/definitions/Response'
+schemes:
+    - http
+swagger: "2.0"
